Fix nav link spacing on mobile

--- a/sass/site/_header.scss
+++ b/sass/site/_header.scss
@@ -6,6 +6,16 @@
 	flex-wrap: wrap;
 	justify-content: space-between;
 
+	li{
+		margin-bottom: 1.5em;
+	}
+
+	@media screen and (max-width: 400px){
+		&{
+			flex-direction: column;
+		}
+	}
+
 	a{
 		padding: 0.75rem; //to match btn horizontal padding
 		border-radius: 5px;
